--- a/cs441_sp2023_tuyts.ipynb
+++ b/cs441_sp2023_tuyts.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOmgXznjjwT6VILmqbQvsoo",
+      "authorship_tag": "ABX9TyPWjZwli+z/sPvTynSxArtG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -724,7 +724,10 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "\n",
+        "# PetFinder.my-Adoption-Prediction\n"
+      ],
       "metadata": {
         "id": "wep6ZA6zG9TR"
       }
@@ -753,6 +756,38 @@
       },
       "execution_count": 5,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We'll be looking at individual features.\n",
+        "Target class ( AdoptionSpeed )\n",
+        "\n",
+        "We'll look at class distribution and investigate for imbalance distribution.\n",
+        "So there are total 5 target class i.e, 0,1,2,3,4 which means-\n",
+        "\n",
+        "1 - Pet was adopted on the same day as it was listed.\n",
+        "\n",
+        "2 - Pet was adopted between 1 and 7 days (1st week) after being listed.\n",
+        "\n",
+        "3 - Pet was adopted between 8 and 30 days (1st month) after being listed.\n",
+        "\n",
+        "4 - Pet was adopted between 31 and 90 days (2nd & 3rd month) after being listed.\n",
+        "\n",
+        "5 - No adoption after 100 days of being listed. (There are no pets in this dataset that waited between 90 and 100 days)"
+      ],
+      "metadata": {
+        "id": "BNQU5QHWnZjO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We'll look at distribution of cat and dog and which pet is most likely to get adopted sooner with the help of plot below. Here I'm going to use stacked bar plot to have good idea from one plot alone."
+      ],
+      "metadata": {
+        "id": "k62BP9obm4qC"
+      }
     },
     {
       "cell_type": "code",
@@ -788,14 +823,14 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "cRsDf_5siEK1",
-        "outputId": "d896e74b-0829-49b7-ed1c-1b67efda7254",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 482
-        }
+        },
+        "id": "cRsDf_5siEK1",
+        "outputId": "d8a98141-3536-45f2-a164-542a431d6216"
       },
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -817,6 +852,7 @@
         "#https://towardsdatascience.com/python-plotting-basics-simple-charts-with-matplotlib-seaborn-and-plotly-e36346952a3a\n",
         "fig, ax = plt.subplots(figsize=(3,4))\n",
         "plt.rcParams['font.size']=17\n",
+        "\n",
         "#percent count\n",
         "labels = [\"dog\",\"cat\"]\n",
         "percentages = [(data[data[\"Type\"]==1].AdoptionSpeed.shape[0]*100)/data.shape[0],\n",
@@ -832,14 +868,14 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "h96Fi88AjP4E",
-        "outputId": "2dce478b-7e32-42ed-a4a3-a546fb298a35",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 269
-        }
+        },
+        "id": "h96Fi88AjP4E",
+        "outputId": "6d6ec6ce-6160-4a0c-aae4-7d0504324710"
       },
-      "execution_count": 7,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "display_data",
@@ -852,6 +888,17 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Conclusion:\n",
+        "\n",
+        "From above It's clear that people are not biased towards any of pets while adopting them. Speed of adaption for both pet is almost same. Since dog pet is 8 percent more in population comparing to cat so we can conlcude one more thing is that dog are slighlty more likely to get listed for adoption comparing to cats."
+      ],
+      "metadata": {
+        "id": "7WSFAcT8nBaL"
+      }
     },
     {
       "cell_type": "code",
