--- a/cs441_sp2023_tuyts.ipynb
+++ b/cs441_sp2023_tuyts.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPWwRo+Q7Fn+4dZB9d7m8NF",
+      "authorship_tag": "ABX9TyP9src0A+d4Pi9rUe3iduhk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -931,6 +931,13 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "VB0-olSFoP0Q"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "!pip install pytrends --upgrade"
@@ -942,7 +949,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -966,6 +973,28 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "***MIR-TERM ***"
+      ],
+      "metadata": {
+        "id": "Bi5mAhhJoQmb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Purposes**\n",
+        "\n",
+        "1. Presenting the price of gold to mom through the lesson\n",
+        "2. Practice manual processing to discover how data is handled\n",
+        "3. Evaluate advantages and disadvantages. State the actual difficulties that I encountered through this problem"
+      ],
+      "metadata": {
+        "id": "orj0JFAUnf8q"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
@@ -974,8 +1003,19 @@
       "metadata": {
         "id": "lyoLV6YAjRuA"
       },
-      "execution_count": 235,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**About DOJI**\n",
+        "\n",
+        "DOJI gold makes a mark on the market when mastering the source of exploitation, production and distribution. The featured product at DOJI is blistered gold with many designs, suitable for many customer segments."
+      ],
+      "metadata": {
+        "id": "Y7y8LHXXnNGN"
+      }
     },
     {
       "cell_type": "code",
@@ -985,8 +1025,17 @@
       "metadata": {
         "id": "HPlmwqGTMCPH"
       },
-      "execution_count": 236,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Data collection**"
+      ],
+      "metadata": {
+        "id": "yyJr1lzoooLo"
+      }
     },
     {
       "cell_type": "code",
@@ -996,8 +1045,17 @@
       "metadata": {
         "id": "ZQ9ypSsSPEaZ"
       },
-      "execution_count": 237,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Data discovery and processing**"
+      ],
+      "metadata": {
+        "id": "NQdHlMDpouvd"
+      }
     },
     {
       "cell_type": "code",
@@ -1007,7 +1065,7 @@
       "metadata": {
         "id": "gLrbPeKCPmPQ"
       },
-      "execution_count": 178,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1023,7 +1081,7 @@
           "height": 206
         }
       },
-      "execution_count": 181,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1190,7 +1248,7 @@
       "metadata": {
         "id": "GufR0lOmadJT"
       },
-      "execution_count": 238,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1206,7 +1264,7 @@
           "height": 206
         }
       },
-      "execution_count": 239,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1364,7 +1422,7 @@
           "height": 206
         }
       },
-      "execution_count": 240,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1522,7 +1580,7 @@
           "height": 206
         }
       },
-      "execution_count": 241,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1677,7 +1735,7 @@
       "metadata": {
         "id": "3jadd09RafDp"
       },
-      "execution_count": 242,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1692,7 +1750,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 243,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1722,7 +1780,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 244,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1752,7 +1810,7 @@
         "id": "pYPEedlxeHJ6",
         "outputId": "e552c11d-3aea-4093-8cd5-a4eb4a15c6c0"
       },
-      "execution_count": 245,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1780,7 +1838,7 @@
       "metadata": {
         "id": "DKUauqtRcLf0"
       },
-      "execution_count": 246,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1795,7 +1853,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 247,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1822,7 +1880,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 248,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1848,7 +1906,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 249,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1861,6 +1919,15 @@
           "execution_count": 249
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Show data results**"
+      ],
+      "metadata": {
+        "id": "8h3ulbc6ox-S"
+      }
     },
     {
       "cell_type": "code",
@@ -1883,7 +1950,7 @@
           "height": 515
         }
       },
-      "execution_count": 250,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1918,6 +1985,7 @@
         "for bars in ax.containers:\n",
         "    ax.bar_label(bars)\n",
         "\n",
+        "\n",
         "plt.title(\"Giá Bán Vàng Hôm Nay Tại Doji\")"
       ],
       "metadata": {
@@ -1928,7 +1996,7 @@
           "height": 515
         }
       },
-      "execution_count": 253,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1951,6 +2019,19 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Problems need to solve**\n",
+        "1. Did not meet the desired result is a specific show of VND value for each product unit\n",
+        "2. Need a variety of data, not necessarily get data from 1 website\n",
+        "3. Try to automate the procedure\n",
+        "4. Respecting the assets of businesses, web data is also included in that set\n"
+      ],
+      "metadata": {
+        "id": "ccw2XbXco9eI"
+      }
     }
   ]
 }
